@@ -7,9 +7,12 @@ import com.datastax.oss.driver.api.core.metadata.schema.ClusteringOrder;
 import com.datastax.oss.driver.api.querybuilder.QueryBuilder;
 import com.datastax.oss.driver.api.querybuilder.SchemaBuilder;
 import com.example.video.model.VideoTag;
+import jakarta.annotation.PostConstruct;
 import jakarta.inject.Singleton;
 
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static com.datastax.oss.driver.api.core.type.DataTypes.TEXT;
 import static com.datastax.oss.driver.api.core.type.DataTypes.TIMEUUID;
@@ -17,59 +20,58 @@ import static com.datastax.oss.driver.api.core.type.DataTypes.TIMEUUID;
 @Singleton
 public class CassandraVideoTagRepository implements VideoTagRepository {
     private PreparedStatement psInsertTag;
-    private PreparedStatement psSelectTag;
+    private PreparedStatement psSelectTagsByVideoId;
 
     private final CqlSession cqlSession;
 
     public CassandraVideoTagRepository(CqlSession cqlSession) {
         this.cqlSession = cqlSession;
+        createTableTag();
         prepareStatements();
     }
 
-    public static void createTableTag(CqlSession cqlSession) {
+    public void createTableTag() {
         cqlSession.execute(SchemaBuilder.createTable(TABLE_TAGS)
                 .ifNotExists()
-                .withPartitionKey(TAG, TEXT)
-                .withClusteringColumn(VIDEO_ID, TIMEUUID)
-                .withClusteringOrder(VIDEO_ID, ClusteringOrder.DESC)
+                .withPartitionKey(VIDEO_ID, TIMEUUID)
+                .withClusteringColumn(TAG, TEXT)
+                .withClusteringOrder(TAG, ClusteringOrder.ASC)
                 .build());
     }
 
     @Override
     public VideoTag save(VideoTag videoTag) {
         cqlSession.execute(psInsertTag.bind(
-                videoTag.getTag(),
-                videoTag.getVideoId()));
+                videoTag.getVideoId(),
+                videoTag.getTag()));
         return videoTag;
     }
 
-    @Override
-    public List<VideoTag> findByTag(String tag) {
-        return cqlSession.execute(psSelectTag.bind(tag))
+    public List<VideoTag> findTagsByVideoId(UUID videoId) {
+        return cqlSession.execute(psSelectTagsByVideoId.bind(videoId))
                 .all()
                 .stream()
                 .map(this::mapRowToVideoTag)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private VideoTag mapRowToVideoTag(Row row) {
         VideoTag videoTag = new VideoTag();
         videoTag.setTag(row.getString(TAG));
-        videoTag.setVideoId(row.getUuid(VIDEO_ID));
         return videoTag;
     }
 
     private void prepareStatements() {
         psInsertTag = cqlSession.prepare(
                 QueryBuilder.insertInto(TABLE_TAGS)
-                        .value(TAG, QueryBuilder.bindMarker())
                         .value(VIDEO_ID, QueryBuilder.bindMarker())
+                        .value(TAG, QueryBuilder.bindMarker())
                         .build());
 
-        psSelectTag = cqlSession.prepare(
+        psSelectTagsByVideoId = cqlSession.prepare(
                 QueryBuilder.selectFrom(TABLE_TAGS)
-                        .all()
-                        .whereColumn(TAG).isEqualTo(QueryBuilder.bindMarker())
+                        .column(TAG)
+                        .whereColumn(VIDEO_ID).isEqualTo(QueryBuilder.bindMarker())
                         .build());
     }
 }
